--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
   <main>
     <h1>People Entered:</h1>
-    <!-- <h2 id="count-el">0</h2> -->
-    <input type="text" id="count-el" placeholder="0">
+    <input type="number" id="count-el" placeholder="0">
     <div class="btn-wrapper">
       <button id="increment-btn" onclick="increment()">ADD</button>
       <button id="decrement-btn" onclick="decrement()">SUBTRACT</button>
