FIXED [refactored saving behavior]
fixed double minus sign

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <h1>People Entered:</h1>
-    <input type="number" id="count-el" placeholder="0">
+    <input type="number" id="count-el" placeholder="0" min="0">
     <div class="btn-wrapper">
       <button id="increment-btn" onclick="increment()">ADD</button>
       <button id="decrement-btn" onclick="decrement()">SUBTRACT</button>
